tests/golden/type_errors/named_struct_wrong_field_assignment_type.cd
struct Person { name: string, age: number }
let p: Person = Person { name: "Ada", age: 36 };
p.age = "old";
